updated svg files

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "slate-react": "^0.65.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
